# lcm-visualization

./: .gitmodules  README.md  tobuild.txt
models/chair/: Chair.mtl
models/chest/: 07_0114_Chest_of_Drawers.mtl
models/door/: door.mtl
models/elevator_door/: elevator_door.mtl
models/husky/: husky_A200.mtl
models/lamp/: lamp.mtl
models/pc/: pc.mtl
remote-dashboard/: CMakeLists.txt  requirements.sh  setup_apache.readme  setup_apache.sh
remote-dashboard/src/public_html/: index.php  maps.settings.json
remote-dashboard/src/public_html/css/: style.css
remote-dashboard/src/server/: server.py  server_legacy.py
renderers/: CMakeLists.txt  README
renderers/cmake/: models.cmake
renderers/models/bed/: Bed_Japan.mtl
renderers/models/laptop/: Laptop1.mtl  laptop.mtl
renderers/models/person/: 3D_Man_Walking.mtl  walking_person.mtl
renderers/models/table/: table.mtl
renderers/models/trashcan/: papelera.mtl
renderers/models/tv/: LCD_Widescreen.mtl
renderers/models/waterfountain/: waterfountain.mtl
renderers/src/: CMakeLists.txt  CMakeLists.txt.bck  er_renderers.h  gl_utils.c  gl_utils.h  renderer_annotation.c  renderer_generic_object.c  renderer_grid.c  renderer_grid.h  renderer_gridmap.c  renderer_gridmap.h  renderer_host_status.c  renderer_host_status.h  renderer_localize.c  renderer_localize.h  renderer_log_annotation.c  renderer_manual_calib.c  renderer_manual_calib.h  renderer_navigator_plan.c  renderer_navigator_plan.h  renderer_navigator_plan.h.no-build  renderer_occupancy_map.c  renderer_occupancy_map.h  renderer_pcl_points.c  renderer_person_model.c  renderer_place_classification.c  renderer_quad_model.c  renderer_robot_commands.c  renderer_robot_commands.h  renderer_robot_status.c  renderer_robot_status.h  renderer_robot_wavefront_model.c  renderer_robot_wavefront_model.h  renderer_rrtstar.c  renderer_satellite.c  renderer_segmentation.c  renderer_sensor_status.c  renderer_simobs.c  renderer_simobs.h  renderer_topological_graph.c  (+8 more)
renderers/src/bak/: er_gl_utils.c  renderer_generic_object.c  renderer_grid.c  renderer_gridmap.c  renderer_host_status.c  renderer_localize.c  renderer_occupancy_map.c  renderer_robot_wavefront_model.c  renderer_rrtstar.c  renderer_tracks.c  renderer_waypoint.c  tile_set.h  viewer_aux_data.c
viewer/: CMakeLists.txt  README
viewer/cmake/: pods.cmake
viewer/src/: CMakeLists.txt  main.cpp
